# french-law

./: .gitignore  Makefile  README.md  dune-project  french-law.opam  french_law.opam
js/: README.md  dune  examples.js  package.json
ocaml/: README.md  api.ml  api.mli  api_web.ml  bench.ml  dune
python/: Makefile  README.md  main.py
python/cnaf_cross_tester/: README.md  cnaf_to_catala.py
python/src/: api.py  dune
rescript/: README.md  package.json
rescript/src/: CatalaFrenchLaw.bs.js  CatalaFrenchLaw.res
