(lang dune 3.0)

(name catala)

(generate_opam_files false)

(formatting)

(source
 (uri git+https://github.com/CatalaLang/french-law.git))

(homepage https://github.com/CatalaLang/french-law)

(bug_reports https://github.com/CatalaLang/catala/issues)

(authors
 "Denis Merigoux"
 "Nicolas Chataing"
 "Emile Rolley"
 "Louis Gesbert"
 "Aymeric Fromherz"
 "Alain Dela\195\171t-Tixeuil"
 "Raphaël Monat")

(maintainers "contact@catala-lang.org")

(license Apache-2.0)
