(dirs src)

(rule
 (alias runtest)
 (package french-law)
 (action
  (run bench)))

(rule
 (action
  (copy
   %{lib:catala-examples.aides_logement:aides_logement_schema.json}
   aides_logement_schema.json)))

(rule
 (action
  (copy
   %{lib:catala-examples.allocations_familiales:allocations_familiales_schema.json}
   allocations_familiales_schema.json)))
