(executable
 (name bench)
 (modes native)
 (public_name bench)
 (modules bench)
 (package french-law)
 (libraries api benchmark))

(library
 (name api)
 (public_name french-law)
 (synopsis
  "A collection of functions for computing French taxes and benefits derived from Catala programs")
 (libraries catala.runtime_ocaml
            catala-examples.allocations_familiales
            catala-examples.aides_logement)
 (modules api))

(rule
 (alias runtest)
 (package french-law)
 (action
  (run bench)))
